<resources>
    <string name="app_name">Weather</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="location_header">Location</string>

    <string name="action_settings">Settings</string>
    <string name="preferences_town">Town</string>
    <string name="preferences_county">County</string>
    <string name="county">County</string>
    <string name="town">Town</string>
    <string name="three_day">3 Days</string>
    <string name="one_week">1 Week</string>
    <string-array name="windDirection">
        <item>North</item>
        <item>Northeast</item>
        <item>East</item>
        <item>Southeast</item>
        <item>South</item>
        <item>Southwest</item>
        <item>West</item>
        <item>Northwest</item>
    </string-array>
    <string name="comfortIndex">Comfort Index</string>
    <string name="uv_index">UV</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="temperature">Temp.</string>
    <string name="probability_of_precipitation">PoP.</string>
    <string name="wind">Wind(Scale)</string>
    <string name="a_temp">AT</string>
    <string name="relative_humidity">RH</string>
    <string name="wind_direction">Wind Dir.</string>
    <string name="no_data">No Data.</string>
    <string name="action_help">Help</string>
    <string name="template_datetime">00:00\n03/19\n(Fri.)</string>
    <string name="template_temperature">24~27</string>
    <string name="template_humidity">20%</string>
    <string-array name="comfortIndex">
        <item>-</item>
        <item>Extremely Cold</item>
        <item>Cold</item>
        <item>Cool</item>
        <item>Comfortable</item>
        <item>hot</item>
        <item>Extremely Hot</item>
    </string-array>
</resources>